--- a/index.html
+++ b/index.html
@@ -1,23 +1,32 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Unbounded:wght@200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500;700;900&display=swap" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Unbounded:wght@200;300;400;500;600;700;800;900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500;700;900&display=swap"
+      rel="stylesheet"
+    />
 
-    <meta name="description" content="BOOSTLAB - An innovative educational platform for photographers of all levels, utilizing AI-based system to teach you how to stand out and achieve stable income" />
-    <meta name="keywords" content="photography, education, AI, platform, photographers, boostlab" />
+    <meta
+      name="description"
+      content="BOOSTLAB - An innovative educational platform for photographers of all levels, utilizing AI-based system to teach you how to stand out and achieve stable income"
+    />
+    <meta
+      name="keywords"
+      content="photography, education, AI, platform, photographers, boostlab"
+    />
     <title>BOOSTLAB - AI-Powered Photography Education Platform</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
-</body>
-
+  </body>
 </html>
